[package]
name = "portversion"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
tokio = { version = "1.10.0", features = ["full"] }
redis = { version = "0.17.0", features = ["tokio-comp"] }