[package]
name = "portversion"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
env_logger = { version = "0.8.4" }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.10.0", features = ["full"] }
redis = { version = "0.17.0", features = ["tokio-comp"] }