[package]
name = "portversion"
version = "0.1.0"
edition = "2018"

[dependencies]
log = { version = "0.4" }
log4rs = { version = "1.0.0" }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.10.0", features = ["full"] }
redis = { version = "0.17.0", features = ["tokio-comp"] }